# climate

./: pyproject.toml  pytest.ini  setup.py
src/climate/: .__init__.py@neomake_8092_500.py  __init__.py  options.py
tests/: test_cli.py  test_climate.py  test_di.py
