[tool.poetry]
name = "climate"
version = "0.1.0"
description = "Command line arguments parsing"
authors = ["Oliver Berger <oliver@digitalarchitekt.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
multidict = "^4.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-randomly = "^3.0"
pytest-watch = "^4.2"
pytest-cache = "^1.0"
pytest-mock = "^1.10"
mock = "^3.0"
pylava = "^0.2.2"
pylava-pylint = "^0.0.3"
pycodestyle = "^2.5"
pydocstyle = "^3.0"
ipython = "^7.5"
isort = "^4.3"
pdbpp = "^0.10.0"
tox = "^3.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
